# beginning

./: .gitignore  CMakeLists.txt  data.txt  greg.db  link.txt  test.cpp  testrun.cpp
.history/: minecraft_20240704145549.txt  output_20240627052753.txt  output_20240627073142.txt  output_20240627081238.txt  output_20240628102728.txt  output_20240628103029.txt  output_20240628103239.txt  output_20240629010925.txt  output_20240703182243.txt  output_20240703182245.txt  output_20240703182311.txt  output_20240703182314.txt  output_20240703182317.txt  output_20240703182320.txt  output_20240703182834.txt  output_20240703184300.txt  skipper_20240627052926.ahk  skipper_20240627052933.ahk  skipper_20240627052938.ahk  skipper_20240627052950.ahk  skipper_20240627052957.ahk  skipper_20240627052959.ahk  skipper_20240627053019.ahk  skipper_20240627053032.ahk  skipper_20240627053039.ahk  skipper_20240627053042.ahk  skipper_20240627053052.ahk  skipper_20240627053100.ahk  skipper_20240627053129.ahk  skipper_20240627053131.ahk  skipper_20240627053133.ahk  skipper_20240627053140.ahk  skipper_20240627053145.ahk  skipper_20240627053153.ahk  skipper_20240627053221.ahk  skipper_20240627053228.ahk  skipper_20240627053308.ahk  skipper_20240627053310.ahk  skipper_20240627053336.ahk  skipper_20240627053338.ahk  (+431 more)
bag/: c_cpp_properties.json  tempCodeRunnerFile.cpp
ideas/: password.cpp
karim hassan project/: gui.py
learning/: index.html  learn.cpp
project/: brackets.cpp  calculator.cpp  data.txt  form.ipynb  functions.cpp  order.cpp  sorter.cpp  tempCodeRunnerFile.cpp
python/: danial.py  (+1 more)
(+5825 files in other folders)
