
add_executable(gg vibes/gg.cpp)
add_executable(problem vibes/problem.cpp)
add_executable(sequence vibes/sequence.cpp)
add_executable(github vibes/github.cpp)
add_executable(timer vibes/timer.cpp)
add_executable(testing ideas/Test/testing.cpp)
add_executable(thinking ideas/thinking/thinking.cpp)
add_executable(Converter ideas/Conventor/Converter.cpp)
add_executable(NetworkQuestion ideas/random/NetworkQuestion.cpp)
add_executable(game1 ideas/movement/game1.cpp)